--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "sucrase": "^3.34.0"
   },
   "dependencies": {
+    "@firebase/storage": "^0.11.2",
+    "@google-cloud/storage": "^7.7.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^10.6.0",
+    "firebase-admin": "^11.11.1",
     "jsonwebtoken": "^9.0.2",
     "mjml": "^4.14.1",
     "multer": "^1.4.5-lts.1",
